updated main image

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </nav>
         <!-- Header-->
         <header class="masthead text-center text-white">
-        	<img class="img-fluid" src="assets/img/wideCollage.jpg" alt="..." />
+        	<img class="img-fluid" src="assets/img/wideCollage_futureCity_nature.jpg" alt="..." />
             <div class="masthead-content">            	
                 <div class="container px-5">
                 	<br>
