minor hotfix capitalize letter

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ The exhibition shows a circular co-creation process in between us and a new enti
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
-                            <h2 class="display-4">Back-end (room 2)</h2>
+                            <h2 class="display-4">Back-end (Room 2)</h2>
                             <p>Visually demonstration of the behind the scenes process. The ‘artist’ studio, a room where the Artificial Intelligence is introduced as a co-creator of the art.  This consists in interactive displays of the audio recording process, from speech to text, processing the text, extracting keywords, prompt engineering, generating images/art, selecting from the generated images and ‘sending’ to the mosaic (the mosaic is projected in room 1).</p>
                             <p>Educational story diagrams (wall-sized posters) presented with an artistic style, about relevant AI topics, relevant to both the technology used in the exhibition, and relevant to the visitors. These diagrams will address thought provoking and sometimes controversial aspects of the selected topics, and shine light on the positive ways in which AI can be used to benefit each of us/the visitors as individuals, and society as a whole.
 An optional feature would be an AI chatbot acting as if it is the artist and answers all your questions regarding the exhibition or the project in general.</p>
