--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <style>
+        header.masthead {
+		    padding-top: calc(10rem + 55px);
+		    padding-bottom: 6rem;
+		  }
+    	</style>
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -30,14 +36,13 @@
             </div>
         </nav>
         <!-- Header-->
-        <header class="masthead text-center text-white">
+        <header class="masthead text-center text-white" padding-bottom="1rem">
         	<img class="img-fluid" src="assets/img/wideCollage_futureCity_nature.jpg" alt="..." />
             <div class="masthead-content">            	
                 <div class="container px-5">
                 	<br>
                     <h1 class="masthead-heading mb-0">AICON 20203</h1>
                     <h2 class="masthead-subheading mb-0">AI Art Exhibition</h2>
-                    <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>
                 </div>
             </div>
             <!-- <div class="bg-circle-1 bg-circle"></div>
