main background gradient orange replaced with dark purple

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         header.masthead {
 		    padding-top: calc(10rem + 55px);
 		    padding-bottom: 6rem;
+		    background: linear-gradient(0deg, #4B0150 0%, #ee0979 100%);
 		  }
     	</style>
     </head>
