update images and image layout
image layout updated

--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@
         </nav>
         <!-- Header-->
         <header class="masthead text-center text-white" padding-bottom="1rem">
-        	<img class="img-fluid" src="assets/img/wideCollage_futureCity_nature.jpg" alt="..." />
+        	<div class="row">
+        		<div class="col-3"></div>
+        		<div class="col-6">
+	        	<img class="img-fluid" src="assets/img/wideCollage_futureCity_nature.jpg" alt="..." />
+	        	</div>
+	        	<div class="col-3"></div>
+	        </div>
             <div class="masthead-content">            	
                 <div class="container px-5">
                 	<br>
@@ -53,27 +59,50 @@
         </header>
         <!-- Content section 1-->
         <section id="scroll">
-            <div class="container px-5">
+            <div class="container px-5">            	
                 <div class="row gx-5 align-items-center">
-                    <div class="col-lg-6 order-lg-2">
-                        <div class="p-5"><img class="img-fluid rounded-circle" src="assets/img/stadsgezichtenWorkshop.jpg" alt="..." /></div>
+                    <div class="col-lg-6 col-md-8 order-lg-2">
+                    	<div class="row"><div class="p-5"><img class="img-fluid rounded-circle" src="assets/img/impression_room1.jpg" alt="..." /></div>  
+                    	</div>                      
                     </div>
-                    <div class="col-lg-6 order-lg-1">
+                    <div class="col-lg-6">
                         <div class="p-5">
                             <h2 class="display-4">Art Exhibition focused on AI</h2>
                             <p>AI is a rapidly evolving technology that only just recently is starting to impact society as a whole. This technology will change society as we know it. AICON aims to embrace this technology and make it conceptually accessible. To reach this goal AICON is designing <b>thought provoking art installations</b>  in co-creation with cutting edge AI technology, residents of Rotterdam, artists and scientists. </p>
                         </div>
                     </div>
                 </div>
+                <div class="row gx-5 align-items-center">
+            		<!-- <div class="col-lg-auto"></div> -->
+            		<div class="col-lg-3">
+            			<div class="p-3"><img src="assets/img/stadsgezichtenWorkshop.jpg" class="img-fluid rounded"></div>
+            		</div>
+            		<!-- <div class="col-lg-auto"></div> -->
+            		<div class="col-lg-3">
+            			<div class="p-3"><img src="assets/img/proposal_stadsgezichtenPortretten_generated2.jpg" class="img-fluid rounded"></div>
+            		</div>     
+            		<!-- <div class="col-lg-auto"></div> -->
+            		<div class="col-lg-3">
+            			<div class="p-3"><img src="assets/img/stickersBlackBoeddha.jpg" class="img-fluid rounded"></div>
+            		</div> 
+            		<div class="col-lg-auto"></div>       		
+            	</div> 
+            	<br/> 
+            	<hr/>          	
             </div>
+
         </section>
-        <!-- Content section 2-->
+
+
+        <br/>
+        <br/>
+        <!-- Content section 2-->    
         <section>
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
-                    <div class="col-lg-6">
-                        <div class="p-5"><img class="img-fluid rounded-circle" src="assets/img/stickersBlackBoeddha.jpg" alt="..." /></div>
-                    </div>
+                	<div class="col-lg-6">
+                        <div class="p-5"><img class="img-fluid rounded-circle" src="assets/img/PeimTranslationFromAIToMaterial.jpg" alt="..." /></div>
+                    </div>                    
                     <div class="col-lg-6">
                         <div class="p-5">
                             <h2 class="display-4">Front-end (Room 1)</h2>
@@ -82,14 +111,36 @@
                         </div>
                     </div>
                 </div>
+                <div class="row gx-5 align-items-center">            		
+            		<!-- <div class="col-lg-auto"></div> -->
+            		<div class="col-lg-3">
+            			<div class="p-3"><img src="assets/img/proposal_stadsgezichtenPortretten.jpg" class="img-fluid rounded"></div>
+            		</div> 
+            		<!-- <div class="col-lg-auto"></div> -->
+            		<div class="col-lg-3">
+            			<div class="p-3"><img src="assets/img/cycle_human_machine.jpg" class="img-fluid rounded"></div>
+            		</div>
+            		<!-- <div class="col-lg-auto"></div> -->
+            		<div class="col-lg-3">
+            			<div class="p-3"><img src="assets/img/proposal_stadsgezichtenPortretten_generated.jpg" class="img-fluid rounded"></div>
+            		</div>     
+            		<div class="col-lg-auto"></div>       		
+            	</div> 
+            	<br/>
+            	<hr/>
             </div>
         </section>
+
+
+        <br/>
+        <br/>
+
         <!-- Content section 3-->
         <section>
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6 order-lg-2">
-                        <div class="p-5"><img class="img-fluid rounded-circle" src="assets/img/mosaicEverywhereComputer.jfif" alt="..." /></div>
+                        <div class="p-5"><img class="img-fluid rounded-circle" src="assets/img/impression_room2.jpg" alt="..." /></div>
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
@@ -100,8 +151,24 @@
                         </div>
                     </div>
                 </div>
+                <div class="row gx-5 align-items-center">
+            		<!-- <div class="col-lg-auto"></div> -->
+            		<div class="col-lg-3">
+            			<div class="p-3"><img src="assets/img/impressionDataCenter.jpg" class="img-fluid rounded"></div>
+            		</div>
+            		<!-- <div class="col-lg-auto"></div> -->
+            		<div class="col-lg-3">
+            			<div class="p-3"><img src="assets/img/backendRoom.jfif" class="img-fluid rounded"></div>
+            		</div> 
+            		<!-- <div class="col-lg-auto"></div> -->
+            		<div class="col-lg-3">
+            			<div class="p-3"><img src="assets/img/ai_spying.jfif" class="img-fluid rounded"></div>
+            		</div>     
+            		<div class="col-lg-auto"></div>       		
+            	</div> 
             </div>
         </section>
+        <br/>
         <!-- Footer-->
         <footer class="py-5 bg-black">
             <div class="container px-5"><p class="m-0 text-center text-white small">Copyright &copy; AICON Exhibition 2022</p></div>
