corrected 1st image layout

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <section id="scroll">
             <div class="container px-5">            	
                 <div class="row gx-5 align-items-center">
-                    <div class="col-lg-6 col-md-8 order-lg-2">
+                    <div class="col-lg-6 order-lg-2">
                     	<div class="row"><div class="p-5"><img class="img-fluid rounded-circle" src="assets/img/impression_room1.jpg" alt="..." /></div>  
                     	</div>                      
                     </div>
