fixed text padding on mobile

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     	<div class="row"><div class="p-5"><img class="img-fluid rounded-circle" src="assets/img/impression_room1.jpg" alt="..." /></div>  
                     	</div>                      
                     </div>
-                    <div class="col-lg-6 col-sm-12 col-12">
+                    <div class="col-lg-6">
                         <div class="p-5">
                             <h2 class="display-4">Art Exhibition focused on AI</h2>
                             <p>AI is a rapidly evolving technology that only just recently is starting to impact society as a whole. This technology will change society as we know it. AICON aims to embrace this technology and make it conceptually accessible. To reach this goal AICON is designing <b>thought provoking art installations</b>  in co-creation with cutting edge AI technology, residents of Rotterdam, artists and scientists. </p>
