adjusted padding a bit, centered images

--- a/index.html
+++ b/index.html
@@ -39,11 +39,9 @@
         <!-- Header-->
         <header class="masthead text-center text-white" padding-bottom="1rem">
         	<div class="row">
-        		<div class="col-3"></div>
-        		<div class="col-6">
+        		<div class="col-lg-8 col-12 mx-auto d-block">
 	        	<img class="img-fluid" src="assets/img/wideCollage_futureCity_nature.jpg" alt="..." />
 	        	</div>
-	        	<div class="col-3"></div>
 	        </div>
             <div class="masthead-content">            	
                 <div class="container px-5">
@@ -61,7 +59,7 @@
         <section id="scroll">
             <div class="container px-5">            	
                 <div class="row gx-5 align-items-center">
-                    <div class="col-lg-6 order-lg-2">
+                    <div class="col-lg-6 order-lg-2 col-10 mx-auto d-block">
                     	<div class="row"><div class="p-5"><img class="img-fluid rounded-circle" src="assets/img/impression_room1.jpg" alt="..." /></div>  
                     	</div>                      
                     </div>
@@ -74,15 +72,15 @@
                 </div>
                 <div class="row gx-5 align-items-center">
             		<!-- <div class="col-lg-auto"></div> -->
-            		<div class="col-lg-3">
+            		<div class="col-lg-3 col-10 mx-auto d-block">
             			<div class="p-3"><img src="assets/img/stadsgezichtenWorkshop.jpg" class="img-fluid rounded"></div>
             		</div>
             		<!-- <div class="col-lg-auto"></div> -->
-            		<div class="col-lg-3">
+            		<div class="col-lg-3 col-10 mx-auto d-block">
             			<div class="p-3"><img src="assets/img/proposal_stadsgezichtenPortretten_generated2.jpg" class="img-fluid rounded"></div>
             		</div>     
             		<!-- <div class="col-lg-auto"></div> -->
-            		<div class="col-lg-3">
+            		<div class="col-lg-3 col-10 mx-auto d-block">
             			<div class="p-3"><img src="assets/img/stickersBlackBoeddha.jpg" class="img-fluid rounded"></div>
             		</div> 
             		<div class="col-lg-auto"></div>       		
@@ -100,7 +98,7 @@
         <section>
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
-                	<div class="col-lg-6">
+                	<div class="col-lg-6 col-10 mx-auto d-block">
                         <div class="p-5"><img class="img-fluid rounded-circle" src="assets/img/PeimTranslationFromAIToMaterial.jpg" alt="..." /></div>
                     </div>                    
                     <div class="col-lg-6">
@@ -113,15 +111,15 @@
                 </div>
                 <div class="row gx-5 align-items-center">            		
             		<!-- <div class="col-lg-auto"></div> -->
-            		<div class="col-lg-3">
+            		<div class="col-lg-3 col-10 mx-auto d-block">
             			<div class="p-3"><img src="assets/img/proposal_stadsgezichtenPortretten.jpg" class="img-fluid rounded"></div>
             		</div> 
             		<!-- <div class="col-lg-auto"></div> -->
-            		<div class="col-lg-3">
+            		<div class="col-lg-3 col-10 mx-auto d-block">
             			<div class="p-3"><img src="assets/img/cycle_human_machine.jpg" class="img-fluid rounded"></div>
             		</div>
             		<!-- <div class="col-lg-auto"></div> -->
-            		<div class="col-lg-3">
+            		<div class="col-lg-3 col-10 mx-auto d-block">
             			<div class="p-3"><img src="assets/img/proposal_stadsgezichtenPortretten_generated.jpg" class="img-fluid rounded"></div>
             		</div>     
             		<div class="col-lg-auto"></div>       		
@@ -139,7 +137,7 @@
         <section>
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
-                    <div class="col-lg-6 order-lg-2">
+                    <div class="col-lg-6 order-lg-2 col-10 mx-auto d-block">
                         <div class="p-5"><img class="img-fluid rounded-circle" src="assets/img/impression_room2.jpg" alt="..." /></div>
                     </div>
                     <div class="col-lg-6 order-lg-1">
@@ -153,15 +151,15 @@
                 </div>
                 <div class="row gx-5 align-items-center">
             		<!-- <div class="col-lg-auto"></div> -->
-            		<div class="col-lg-3">
+            		<div class="col-lg-3 col-10 mx-auto d-block">
             			<div class="p-3"><img src="assets/img/impressionDataCenter.jpg" class="img-fluid rounded"></div>
             		</div>
             		<!-- <div class="col-lg-auto"></div> -->
-            		<div class="col-lg-3">
+            		<div class="col-lg-3 col-10 mx-auto d-block">
             			<div class="p-3"><img src="assets/img/backendRoom.jfif" class="img-fluid rounded"></div>
             		</div> 
             		<!-- <div class="col-lg-auto"></div> -->
-            		<div class="col-lg-3">
+            		<div class="col-lg-3 col-10 mx-auto d-block">
             			<div class="p-3"><img src="assets/img/ai_spying.jfif" class="img-fluid rounded"></div>
             		</div>     
             		<div class="col-lg-auto"></div>       		
